--- a/config/database.yml
+++ b/config/database.yml
@@ -4,3 +4,9 @@ development:
   host: localhost
   pool: 5
   timeout: 5000
+
+test:
+  adapter: postgresql
+  database: drop_task_test
+  pool: 5
+  timeout: 5000
